--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer p-3">
-    <div class="container-lg m-3">
+    <div class="container-xxl m-3">
         <div class="row">
             <div class="col-3">
                 <a href="{{ '/' | relative_url }}" class="footer-brand">
