--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer p-3">
-    <div class="container-xxl mt-3 mb-3">
+<footer class="footer p-5">
+    <div class="container-xxl">
         <div class="row">
             <div class="col-3">
                 <a href="{{ '/' | relative_url }}" class="footer-brand">
